[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/stickman/NinjaPlayerInfo.gd" type="Script" id=1]
[ext_resource path="res://characters/stickman/momentum.png" type="Texture" id=2]
[ext_resource path="res://theme.tres" type="Theme" id=3]

[node name="PlayerInfo" type="MarginContainer"]
margin_right = 319.0
margin_bottom = 20.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource( 3 )
custom_constants/margin_right = 20
custom_constants/margin_left = 20
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
margin_left = 20.0
margin_right = 299.0
margin_bottom = 20.0

[node name="TextureRect1" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="Label1" type="Label" parent="HBoxContainer/TextureRect1"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 4.0
margin_right = 19.0
margin_bottom = 18.0
grow_horizontal = 0
custom_colors/font_color = Color( 0.94902, 1, 0.192157, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 21.0
margin_right = 41.0
margin_bottom = 20.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="Label2" type="Label" parent="HBoxContainer/TextureRect2"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 4.0
margin_right = 19.0
margin_bottom = 18.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.94902, 1, 0.192157, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 42.0
margin_right = 62.0
margin_bottom = 20.0
texture = ExtResource( 2 )
stretch_mode = 6

[node name="Label3" type="Label" parent="HBoxContainer/TextureRect3"]
unique_name_in_owner = true
margin_left = 1.0
margin_top = 4.0
margin_right = 19.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.94902, 1, 0.192157, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
